Tue Jun 30 10:32:20 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/application.py,
	  flax/searchserver/backends/xappy_backend.py: Rework and refactor.

Tue Jun 30 10:30:45 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/queries.py: Fix bugs due to minor typos.

Tue Jun 30 10:28:52 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/schema.py: Add support for spell correction in
	  xappy schema.  Reorganise a bit to be neater.

Tue Jun 30 04:40:29 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/queries.py: Add Query.filter() method.

Mon Jun 29 20:21:21 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/queries.py: Fix repr() to produce what the test
	  expects.

Mon Jun 29 20:18:11 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/jstemplates.py,
	  flax/searchserver/unittests/jstemplate_test.py: Code for
	  evaluating search templates written in javascript.

Mon Jun 29 19:37:30 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/queries.py,
	  flax/searchserver/unittests/abstract_queries_test.py: Rework, and
	  add QueryExact and QuerySimilar.

Thu Jun 25 00:50:47 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/presentations/europython2009.odp: First draft of slides for
	  europython.

Thu Jun 25 00:50:06 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/api.rst: Minor tweaks - typos and parameter names.

Fri Jun 19 12:38:01 BST 2009  Tom Mortimer <tom@flax.co.uk>

	* flax/searchserver/backends/xappy_backend.py,
	  flax/searchserver/application.py: Added provisional feature for
	  returning terms for a specified field.

Thu Jun 11 12:55:40 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/backends/xappy_backend.py: Remove debug print.

Tue Jun 09 22:39:11 GMT 2009  Richard Boulton <richard@lemurconsulting.com>